services/buzzer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: buzzer
spec:
  selector:
    app: buzzer
  ports:
  - protocol: TCP
    port: 8090
    targetPort: 8090
