services/buzzer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: buzzer
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
  - host: buzzer.ayanides.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: buzzer
            port:
              number: 8090
